[package]
name = "cloudflare-bypasser"
version = "0.1.5"
authors = ["Xavier Lau <c.estlavie@icloud.com>"]
edition = "2018"
repository = "https://github.com/AurevoirXavier/cloudflare-bypasser"
description = "A crate to bypass Cloudflare's anti-bot page, inspired by python module [cloudflare-scrape](https://github.com/Anorov/cloudflare-scrape)"
readme = "README.md"
keywords = ["bypass", "cloudflare"]
license = "MIT/Apache-2.0"

[dependencies]
base64 = "0.10.1"
fake-useragent = "0.1.2"
regex = "1.1.6"
reqwest = "0.9.16"
url = "1.7.2"
