[package]
name = "cloudflare-bypasser"
version = "0.1.5"
authors = ["Xavier Lau <c.estlavie@icloud.com>"]
edition = "2018"
repository = "https://github.com/AurevoirXavier/cloudflare-bypasser"
description = "A crate to bypass Cloudflare's anti-bot page, inspired by python module [cloudflare-scrape](https://github.com/Anorov/cloudflare-scrape)"
readme = "README.md"
keywords = ["bypass", "cloudflare"]
license = "MIT/Apache-2.0"

[dependencies]
base64 = "0.11.0"
fake-useragent = "0.1.3"
regex = "1.3.4"
reqwest = { version = "0.10.3", features = ["blocking", "native-tls", "gzip"] }
url = "2.1.1"
