[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "A crate to bypass Cloudflare's anti-bot page, inspired by python module [cloudflare-scrape](https://github.com/Anorov/cloudflare-scrape)"
edition     = "2021"
keywords    = ["bypass", "cloudflare"]
license     = "GPL-3.0"
name        = "cloudflare-bypasser"
readme      = "README.md"
repository  = "https://github.com/hack-ink/cloudflare-bypasser"
version     = "1.0.0"

[dependencies]
base64         = "0.11.0"
fake-useragent = "0.1.3"
regex          = "1.3.4"
reqwest        = { version = "0.10.3", features = ["blocking", "native-tls", "gzip"] }
url            = "2.1.1"
